[package]
name = "process_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[dependencies.windows]
version = "0.60"
features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_SystemInformation",
  "Win32_Storage_FileSystem"
]